<resources>

    <string name="app_name">Pursuit</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Pursuit</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="menu_title">Menu</string>
    <string name="menu_play">Jouer</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="new_question">Pursuit a t-il de nouvelle question ?</string>
    <string name="no_question_update">Pas de nouvelles question :(</string>
    <string name="question_update_available">De nouvelles questions sont disponibles ! :)</string>
    <string name="bonne_reponse">Bonne réponse</string>
    <string name="mauvaise_reponse">Mauvaise réponse</string>
    <string name="cancel">Annuler</string>

    <!-- Main activity -->
    <string name="ma_no_internet">Oops ! Aucune connexion internet en vue !\nImpossible de télécharger les questions :(</string>
    <string name="ma_no_internet_title">Web is far away</string>
    <string name="ma_i_fill_fix_it">Je règle ça.</string>
    <string name="title_activity_answer">AnswerActivity</string>
    <string name="title_activity_good_answer">GoodAnswerActivity</string>
    <string name="title_activity_wrong_answer">WrongAnswerActivity</string>
    <string name="title_activity_create_player">CreatePlayerActivity</string>

    <!-- Create Player activity -->
    <string name="cp_hi_im_pursuit">Salut, moi c\'est Pursuit.</string>
    <string name="cp_and_you">Et toi ?</string>
    <string name="cp_add_player">Ajouter un(e) ami(e)</string>
    <string name="cp_lets_begin">C\'est parti !</string>
    <string name="title_activity_choose_player">ChoosePlayer</string>
    
    <!-- Add a friend -->
    <string name="af_whats_your_friends_name">Et comment s\'appelle ton ami(e) ?</string>
    <string name="af_let_him_choose_his_universe">Laisse-le choisir son univers !</string>
    <string name="af_add">Ajouter</string>
    <string name="af_number_of_player_max_reached">Nombre de joueur maximum atteint</string>

    <!-- Choose Player activity -->
    <string name="chp_choose_your_player">Mais&#8230; qui es-tu déjà ?!</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>

</resources>