<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/cp_hi_im_pursuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/cp_hi_im_pursuit"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/cp_and_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cp_hi_im_pursuit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/cp_and_you"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/cp_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cp_and_you"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/cp_add_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cp_name_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/cp_add_player"
        android:textSize="13dp" />

    <Button
        android:id="@+id/cp_cancel"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/cp_lets_begin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cp_cancel"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="@string/cp_lets_begin" />

</RelativeLayout>
